--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rai Vitor <raivitor@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "puppeteer": "^1.19.0"
